# PS3DK

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md
samples/audio/hello-ppu-audio/: CMakeLists.txt  Makefile
samples/audio/hello-ppu-audio-out/: CMakeLists.txt  Makefile
samples/audio/hello-ppu-audio-out/source/: main.c
samples/audio/hello-ppu-audio/source/: main.c
samples/audio/hello-ppu-mic/: CMakeLists.txt
samples/audio/hello-ppu-mic/source/: main.c
samples/audio/hello-ppu-voice/: CMakeLists.txt
samples/audio/hello-ppu-voice/source/: main.c
samples/codec/hello-ppu-adec/: CMakeLists.txt
samples/codec/hello-ppu-adec/source/: main.cpp
samples/codec/hello-ppu-atrac3multi/: CMakeLists.txt
samples/codec/hello-ppu-atrac3multi/source/: main.cpp
samples/codec/hello-ppu-atrac3plus/: CMakeLists.txt
samples/codec/hello-ppu-atrac3plus/source/: main.cpp
samples/codec/hello-ppu-celp8enc/: CMakeLists.txt
samples/codec/hello-ppu-celp8enc/source/: main.cpp
samples/codec/hello-ppu-celpenc/: CMakeLists.txt
samples/codec/hello-ppu-celpenc/source/: main.cpp
samples/codec/hello-ppu-dmux/: CMakeLists.txt
samples/codec/hello-ppu-dmux/source/: main.cpp
samples/codec/hello-ppu-gifdec/: CMakeLists.txt
samples/codec/hello-ppu-gifdec/source/: main.cpp
samples/codec/hello-ppu-jpg-enc/: CMakeLists.txt
samples/codec/hello-ppu-jpg-enc/source/: main.c
samples/codec/hello-ppu-jpgenc/: CMakeLists.txt
samples/codec/hello-ppu-jpgenc/source/: main.c  main.cpp
samples/codec/hello-ppu-pamf/: CMakeLists.txt
samples/codec/hello-ppu-pamf/source/: main.cpp
samples/codec/hello-ppu-pngenc/: CMakeLists.txt
samples/codec/hello-ppu-pngenc/source/: main.cpp
samples/codec/hello-ppu-sail/: CMakeLists.txt
samples/codec/hello-ppu-sail-rec/: CMakeLists.txt
samples/codec/hello-ppu-sail-rec/source/: main.cpp
samples/codec/hello-ppu-sail/source/: main.cpp
samples/dbgfont/hello-ppu-dbgfont-console/: CMakeLists.txt
samples/dbgfont/hello-ppu-dbgfont-console/source/: main.c
samples/fw/hello-ppu-fw-gcm-text/: CMakeLists.txt
samples/fw/hello-ppu-fw-gcm-text/source/: main.cpp
samples/fw/hello-ppu-fw-headers/: CMakeLists.txt
samples/fw/hello-ppu-fw-headers/source/: main.cpp
samples/fw/hello-ppu-fw-input/: CMakeLists.txt
samples/fw/hello-ppu-fw-input/source/: main.cpp
samples/fw/hello-ppu-fw-null-lifecycle/: CMakeLists.txt
samples/fw/hello-ppu-fw-null-lifecycle/source/: main.cpp
samples/fw/hello-ppu-fw-tier2/: CMakeLists.txt
samples/fw/hello-ppu-fw-tier2/source/: main.cpp
tools/: Cargo.toml
tools/abi-verify/: Cargo.toml
tools/abi-verify/src/: lib.rs  main.rs
tools/cgcomp-v2/: CMakeLists.txt  README.md
tools/cgcomp-v2/src/: main.cpp
tools/cgcomp-v2/src/donor/: embed_builtin_header.py
tools/cgcomp-v2/src/nv40/: nv40_emit.cpp  nv40_emit.h  nv40_fp_emit.cpp  nv40_vp_assembler.cpp  nv40_vp_assembler.h  nv40_vp_emit.cpp  nvfx_types.h
tools/cgcomp-v2/tests/: run_diff.sh
tools/cgcomp-v2/tests/shaders/: identity_color_v.cg  identity_v.cg
tools/coverage-report/: Cargo.toml
tools/coverage-report/src/: main.rs
tools/docs/: coverage.md
tools/jobbin2-wrap/: Cargo.toml
tools/jobbin2-wrap/src/: encoder.rs  jobheader.rs  lib.rs  main.rs  patches.rs  ppu_obj.rs  ppu_write.rs  report.rs  spu_elf.rs
tools/nidgen/: Cargo.toml
tools/nidgen/nids/: README.md  aliases.yaml  cellFs.yaml  schema.yaml  sys_lv2.yaml
tools/nidgen/nids/extracted/: libadec_stub.yaml  libatrac3multi_stub.yaml  libatrac3plus_stub.yaml  libaudio_stub.yaml  libc_stub.yaml  libcamera_stub.yaml  libcelp8enc_stub.yaml  libcelpenc_stub.yaml  libcrashdump_stub.yaml  libdaisy_stub.yaml  libdbg_libio_stub.yaml  libdmux_stub.yaml  libfiber_stub.yaml  libfontFT_stub.yaml  libfont_stub.yaml  libfreetypeTT_stub.yaml  libfreetype_stub.yaml  libfs_stub.yaml  libgcm_gpad_stub.yaml  libgcm_sys_stub.yaml  libgem_stub.yaml  libgifdec_stub.yaml  libhttp_stub.yaml  libhttp_util_stub.yaml  libio_stub.yaml  libjpgdec_stub.yaml  libjpgenc_stub.yaml  libkey2char_stub.yaml  libl10n_stub.yaml  liblv2_stub.yaml  liblv2dbg_stub.yaml  libm_stub.yaml  libmedi_stub.yaml  libmic_stub.yaml  libnet_stub.yaml  libnetctl_stub.yaml  libovis_stub.yaml  libpamf_stub.yaml  libpngdec_stub.yaml  libpngenc_stub.yaml  (+60 more)
tools/nidgen/src/: archive.rs  db.rs  extract.rs  lib.rs  main.rs  nid.rs  stubgen.rs  verify.rs
tools/nidgen/tests/: fnid_vectors.rs  screenshot_archive.rs
tools/psgl/: glsl_subset_to_cg.py
tools/psgl-shader-builder/: psgl_shader_builder.c
tools/rsx-cg-compiler/: CMakeLists.txt  README.md
tools/rsx-cg-compiler/docs/: KNOWN_ISSUES.md  OPTIMIZATION.md  REVERSE_ENGINEERING.md
tools/rsx-cg-compiler/src/: cg_container_fp.cpp  cg_container_fp.h  cg_container_vp.cpp  cg_container_vp.h  compile_options.h  main.cpp  sony_container_fp.cpp  sony_container_fp.h  sony_container_vp.cpp  sony_container_vp.h  version.h.in
tools/rsx-cg-compiler/src/donor/: builtin_shader_header.cpp  builtin_shader_header.h  builtin_shader_header_api.h
tools/rsx-cg-compiler/src/nv40/: nv40_emit.cpp  nv40_emit.h  nv40_fp_assembler.cpp  nv40_fp_assembler.h  nv40_fp_emit.cpp  nv40_general_lowering.cpp  nv40_general_lowering.h  nv40_if_convert.cpp  nv40_if_convert.h  nv40_vp_assembler.cpp  nv40_vp_assembler.h  nv40_vp_emit.cpp  nvfx_shader.h
tools/rsx-cg-compiler/tests/: run_diff.sh
tools/rsx-cg-compiler/tests/shaders/: abs_input_f.cg  add_f.cg  add_uniforms_v.cg  alphakill_f.cg  branch_false_varying_f.cg  branch_literal_f.cg  branch_true_varying_f.cg  cmp_eq_f.cg  cmp_ge_f.cg  cmp_le_f.cg  cmp_lt_f.cg  cmp_ne_f.cg  const_out_f.cg  const_out_v.cg  dot3_f.cg  dot4_f.cg  fp_computed_color_store_f.cg  fp_mad_varying_addend_f.cg  fp_normalized_phong_vecinsert_f.cg  fp_pow_computed_literal_f.cg  fp_vecinsert_select_specular_f.cg  generic_chain_temp_v.cg  half_out_f.cg  (+40 more)
tools/sprx-linker/: .gitignore  Makefile  sprx-linker.c
tools/spu-elf-to-ppu-obj/: Cargo.toml
tools/spu-elf-to-ppu-obj/src/: elf_embed.rs  encoder.rs  jobbin2.rs  lib.rs  main.rs  ppu_obj.rs  ppu_write.rs  wrapper.rs
(+1386 files in other folders)
