[workspace]
resolver = "2"
members = [
    "nidgen",
    "coverage-report",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PS3 Custom Toolchain contributors"]
license = "MIT"
repository = "https://github.com/FirebirdTA01/PS3_Custom_Toolchain"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha1 = "0.10"
thiserror = "1.0"
walkdir = "2.5"

[profile.release]
lto = "thin"
codegen-units = 1
