[workspace]
resolver = "2"
members = [
    "nidgen",
    "coverage-report",
    "abi-verify",
]

[workspace.package]
version = "0.2.35"
edition = "2021"
authors = ["PS3 Custom Toolchain contributors"]
license = "MIT"
repository = "https://github.com/FirebirdTA01/PS3_Custom_Toolchain"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1.0"
ar = "0.9"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
object = { version = "0.36", default-features = false, features = ["read", "elf", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.10"
thiserror = "1.0"
walkdir = "2.5"

[profile.release]
lto = "thin"
codegen-units = 1
