[package]
name = "coverage-report"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Sony SDK vs our install tree API coverage matrix"

[[bin]]
name = "coverage-report"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ar.workspace = true
clap.workspace = true
nidgen = { path = "../nidgen" }
object.workspace = true
serde.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
