[package]
name = "spu-elf-to-ppu-obj"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Clean-room SPU ELF to PPU object wrapper and inspection tool"

[[bin]]
name = "spu-elf-to-ppu-obj"
path = "src/main.rs"

[lib]
name = "spu_elf_to_ppu_obj"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
object.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
