cmake_minimum_required(VERSION 3.20)
project(hello-ppu-atrac3plus CXX)
include(ps3-self)
add_executable(hello-ppu-atrac3plus source/main.cpp)
target_compile_features(hello-ppu-atrac3plus PRIVATE cxx_std_17)
target_link_libraries(hello-ppu-atrac3plus PRIVATE atrac3plus_stub sysmodule_stub c_stub sysutil rt lv2 m)
ps3_add_self(hello-ppu-atrac3plus)
