cmake_minimum_required(VERSION 3.20)
project(hello-ppu-celp8enc CXX)
include(ps3-self)
add_executable(hello-ppu-celp8enc source/main.cpp)
target_compile_features(hello-ppu-celp8enc PRIVATE cxx_std_17)
target_link_libraries(hello-ppu-celp8enc PRIVATE celp8enc_stub sysmodule_stub c_stub sysutil rt lv2 m)
ps3_add_self(hello-ppu-celp8enc)
