cmake_minimum_required(VERSION 3.20)
project(hello-ppu-gifdec CXX)
include(ps3-self)
add_executable(hello-ppu-gifdec source/main.cpp)
target_compile_features(hello-ppu-gifdec PRIVATE cxx_std_17)
target_link_libraries(hello-ppu-gifdec PRIVATE gifdec_stub sysmodule_stub c_stub sysutil rt lv2 m)
ps3_add_self(hello-ppu-gifdec)
